# security-watchdog

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  architecture.md  deployment.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml  security.md
.github/workflows/: docker-publish.yml
app/: __init__.py  main.py  worker.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  logging.py  security.py  utils.py
app/dashboard/: __init__.py  router.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  entities.py  schemas.py
app/repositories/: __init__.py  store.py
app/scanners/: __init__.py  container_scanner.py  dependency_extractor.py  homeassistant_scanner.py  repository_scanner.py  secret_scanner.py  unraid_scanner.py
app/scheduler/: __init__.py  jobs.py
app/services/: __init__.py  ai_extraction.py  alerts.py  cache.py  github_client.py  homeassistant_remote.py  manual_scan_jobs.py  matching.py  orchestrator.py  reporting.py  risk.py  sbom.py  threat_intelligence.py  version_catalog.py  vulnerability_service.py
app/static/: styles.css
app/templates/: dashboard.html
docker/: entrypoint.sh
tests/: test_api_routes.py  test_dashboard_router.py  test_dependency_extractor.py  test_homeassistant_scanner.py  test_manual_scan_jobs.py  test_matching_and_risk.py  test_orchestrator.py  test_reporting.py  test_repository_scanner.py  test_secret_scanner.py  test_store.py  test_vulnerability_service.py
unraid/: security-watchdog.xml
